# ChartModel_With_Server

./: .gitignore  README.md  main.py  pyproject.toml  requirments.txt
data/: fetch_data.py  preprocess.py
model/: predict.py  train.py  transformer.py
model/config/: config.py
web_app/: db.sqlite3
web_app/domain/: services.py
web_app/repositories/: admin.py  models.py
web_app/repositories/migrations/: 0001_initial.py  0002_modelstatus_stock_stockdata_delete_requeststock.py  0003_celerytaskrecord.py
web_app/services/: controller.py  tasks.py
web_app/view/: apps.py  views.py
web_app/view/templates/: index.html
web_app/web_app/: celery.py  settings.py  urls.py
