[project]
name = "chartmodel-with-server"
version = "0.1.0"
description = "A Django-based web server integrating ChartModel for data visualization."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "yfinance>=0.2.66",
]
