[project]
name = "chartmodel-with-server"
version = "0.1.0"
description = "A Django-based web server integrating ChartModel for data visualization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "yfinance>=0.2.66",
]
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]
torchvision = [
    { index = "pytorch-cu130" },
]
